helm/node-normalization-web-server/network-policy-dev-to-exp.yaml
# The default NetworkPolicy allows pods in translator-dev to be accessed
# from translator-exp. To allow the reverse (a pod in translator-dev to
# access pods in translator-exp) you need to allow this network policy.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nn-web-server-allow-egress-to-translator-exp
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: node-normalization-web
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: translator-exp
  policyTypes:
    - Egress
